# MutechPalabos

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  appveyor.yml  run-clang-format.sh
Post Process/: PlotCpDistribution.py  liftdragplotting.py  ppmtogifanimation.py  vtm.py
UnderstandingGridRefinement/: .gitignore  countingthedensityfile.py  densityfileprocessing.py  densityfileprocessing2.py  griddensityfilegeneration.py  insideairfoil.py  refiningairfoil.py  reverselast1000rows.py
coupledSimulators/npFEM/: Constraint.cpp  Constraint.h  Force.cpp  Force.h  LSSolver.cpp  LSSolver.h  Solver.cpp  Types.h  common.h  csv_to_eigen.h  hyperelasticity.h  rbcCommunicate.h  rbcGlobal.h  rbcParticle.h  rbcShapeOp.h  shapeOpWrapper.cpp  visualization.h
docker/: Dockerfile
examples/: .gitignore
examples/showCases/: .gitignore
externalLibraries/tinyxml/: tinyxmlparser.cpp
src/algorithm/: basicAlgorithms.hh  benchmarkUtil.hh  empiricalData.cpp  interpolation2D.hh  linearAlgebra.hh  nonlinearEquationSolvers.hh  quadrature.hh  spline.h  spline.hh  statistics.cpp  timePeriodicSignal.hh
src/atomicBlock/: atomicBlock2D.h  atomicBlock3D.h  atomicBlockOperations2D.cpp  atomicBlockOperations2D.h  atomicContainerBlock2D.h  atomicContainerBlock3D.h  blockLattice2D.h  blockLattice2D.hh  blockLattice3D.h  blockLattice3D.hh  dataField2D.h  dataField2D.hh  dataField3D.h  dataField3D.hh  dataProcessingFunctional2D.cpp  dataProcessingFunctional2D.h  dataProcessingFunctional3D.cpp  dataProcessingFunctional3D.h  dataProcessor2D.cpp  dataProcessor3D.cpp  dataProcessorWrapper2D.hh  reductiveDataProcessingFunctional2D.cpp  reductiveDataProcessingFunctional2D.h  reductiveDataProcessingFunctional3D.cpp  reductiveDataProcessingFunctional3D.h
src/basicDynamics/: comprehensiveIsoThermalDynamics.h  comprehensiveIsoThermalDynamics.hh  dynamicsProcessor2D.hh  dynamicsProcessor3D.h  dynamicsProcessor3D.hh  externalForceDynamics.hh  headers3D.hh  isoThermalDynamics.hh  thermalDynamics.hh
src/boundaryCondition/: NLD_boundaries3D.hh  NLD_boundaryDynamics3D.hh  PartialBBdynamics.h  bounceBackModels.hh  bounceBackModels2D.hh  bounceBackModels3D.hh  boundaryDynamics.hh  boundaryInstantiator2D.h  boundaryTemplates.h  finiteDifferenceBoundaryProcessor2D.hh  finiteDifferenceBoundaryProcessor3D.hh  generalizedBoundaryDynamics.hh  generalizedBoundaryDynamicsSolvers.h  generalizedBoundaryDynamicsSolvers.hh  generalizedCompressibleBoundaryTemplates.h  generalizedIncompressibleBoundaryTemplates.h  headers3D.h  headers3D.hh  neumannCondition2D.hh  neumannCondition3D.hh  partialBBdynamics.h  partialBBdynamics.hh  regularizedBoundaryDynamics2D.hh  regularizedBoundaryDynamics3D.hh  spongeZones2D.hh  spongeZones3D.hh  wrappedLocalBoundaryProcessor2D.hh  wrappedLocalBoundaryProcessor3D.hh
src/coProcessors/: coProcessor3D.hh  coProcessorCommunication3D.hh  coProcessorFunctional3D.hh  coProcessorInstantiation3D.hh
src/complexDynamics/: adiabaticBoundaryProcessor2D.h  advectionDiffusionBoundaries.hh  advectionDiffusionBoundaryCondition2D.h  advectionDiffusionBoundaryCondition2D.hh  advectionDiffusionBoundaryCondition3D.h  advectionDiffusionBoundaryCondition3D.hh  advectionDiffusionBoundaryInstantiator2D.h  advectionDiffusionBoundaryInstantiator3D.h  advectionDiffusionDynamics.hh  advectionDiffusionProcessor2D.hh  advectionDiffusionProcessor3D.hh  asinariModel.hh  asinariTemplates.h  carreauDynamics.hh  dynamicSmagorinskyLattices2D.h  dynamicSmagorinskyLattices3D.h  dynamicSmagorinskyProcessor3D.h  dynamicSmagorinskyProcessor3D.hh  entropicDynamics.h  entropicDynamics.hh  externalForceMrtDynamics.hh  headers2D.h  headers2D.hh  kbcDynamics.hh  mrtDynamics.hh  smagorinskyDynamics.h  smagorinskyDynamics.hh  smagorinskyDynamics3D.h  smagorinskyGenerics2D.h  smagorinskyGenerics3D.h  trtDynamics.h  trtDynamics.hh  wavePropagation.hh  zhouAxisymmetricDynamics.h  zhouAxisymmetricDynamics.hh
src/core/: array.h  blockIdentifiers.h  blockLatticeBase2D.h  blockLatticeBase3D.h  blockStatistics.cpp  blockStatistics.h  cell.h  cell.hh  dataFieldBase2D.h  dataFieldBase3D.h  dynamics.h  dynamics.hh  dynamicsIdentifiers.h  dynamicsIdentifiers.hh  functions.h  geometry2D.h  geometry3D.h  globalDefs.h  hierarchicSerializer.h  nonLocalDynamics2D.hh  plbComplex.hh  plbDebug.h  plbLogFiles.cpp  plbProfiler.cpp  plbRandom.h  plbTimer.cpp  plbTimer.h  plbTypenames.cpp  plbTypenames.h  processorIdentifiers2D.cpp  processorIdentifiers2D.h  processorIdentifiers3D.cpp  processorIdentifiers3D.h  realFunction3D.h  runTimeDiagnostics.cpp  serializer.cpp  serializer.h  serializer.hh  units.cpp  units.h  (+2 more)
src/dataProcessors/: dataAnalysisFunctional2D.h  dataAnalysisFunctional2D.hh  dataAnalysisFunctional3D.hh  dataAnalysisWrapper2D.h  dataAnalysisWrapper2D.hh  dataAnalysisWrapper3D.h  dataInitializerFunctional2D.h  dataInitializerFunctional2D.hh  dataInitializerFunctional3D.h  dataInitializerFunctional3D.hh  dataInitializerGenerics2D.h  dataInitializerGenerics3D.h  dataInitializerWrapper2D.h  dataInitializerWrapper2D.hh  dataInitializerWrapper3D.h  dataInitializerWrapper3D.hh  metaStuffFunctional2D.cpp  metaStuffFunctional2D.hh  metaStuffFunctional3D.cpp  metaStuffFunctional3D.hh  metaStuffWrapper3D.cpp  metaStuffWrapper3D.hh  ntensorAnalysisFunctional2D.hh  ntensorAnalysisFunctional3D.hh
src/finiteDifference/: WENO3_procedure.h  WENO3_procedure.hh  fdFunctional2D.hh  fdFunctional3D.hh  fdStencils1D.h  fdStencils2D.h  fdWeights.hh  fdWrapper2D.hh  fdWrapper3D.hh  headers3D.h  headers3D.hh  interpolations2D.hh  interpolations3D.h  interpolations3D.hh
src/gridRefinement/: boxLogic3D.cpp  couplingActionsGenerator3D.hh  couplingInterfaceGenerator3D.cpp  couplingInterfaceGenerator3D.hh  dataAnalysisWrapper3D.h  dataAnalysisWrapper3D.hh  gridRefinementFunctional3D.hh  multiLevel3D.h  multiLevelWrapper3D.hh  octree.hh  octreeGridGenerator.hh  octreeGridStructure.cpp  refinementCriteria3D.hh  rescaleEngine.h  rescaleEngine.hh
src/io/: base64.hh  colormaps.cpp  colormaps.h  endianness.h  hdfWrapper.h  (+24 more)
(+592 files in other folders)
